feature: proxy rule openapi specification (#200)
* openapi: Added Proxy Rule specification

* chore: dependencies upgrade
